--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
   pull_request:
     branches: [main, develop]
 
+permissions:
+  contents: write
+  packages: write
+  id-token: write
+  actions: read
+  security-events: write
+
 env:
   NODE_VERSION: '16.20.2'
   REGISTRY: ghcr.io
@@ -19,6 +26,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -26,6 +35,12 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+
+      - name: Diagnostic: Node & environment
+        run: |
+          echo "Node version:" && node --version || true
+          echo "NPM version:" && npm --version || true
+          echo "Workspace listing:" && ls -la || true
 
       - name: Install dependencies
         working-directory: ./frontend
@@ -47,9 +62,12 @@ jobs:
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -57,6 +75,14 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+
+      - name: Diagnostic: Check Codecov token
+        run: |
+          if [ -z "${{ secrets.CODECOV_TOKEN }}" ]; then
+            echo "WARNING: CODECOV_TOKEN is not set — codecov upload may fail (public repos may not require token)."
+          else
+            echo "CODECOV_TOKEN appears set (will not print value)."
+          fi
 
       - name: Install dependencies
         working-directory: ./frontend
@@ -78,9 +104,12 @@ jobs:
   e2e:
     name: E2E Tests
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -116,9 +145,12 @@ jobs:
   performance:
     name: Performance Tests
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -149,15 +181,18 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
+    needs: test
     permissions:
       contents: read
       security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@v0
         with:
           scan-type: 'fs'
           scan-ref: '.'
@@ -181,6 +216,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -224,6 +261,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Diagnostic: Check Render and Vercel secrets
+        run: |
+          if [ -z "${{ secrets.RENDER_API_KEY }}" ]; then echo "ERROR: RENDER_API_KEY not set"; exit 1; fi
+          if [ -z "${{ secrets.RENDER_BACKEND_SERVICE_ID_STAGING }}" ]; then echo "ERROR: RENDER_BACKEND_SERVICE_ID_STAGING not set"; exit 1; fi
+          if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then echo "WARNING: VERCEL_TOKEN not set — Vercel deploy may fail"; fi
 
       - name: Deploy to Vercel (Staging)
         uses: amondnet/vercel-action@v25
@@ -256,6 +301,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Diagnostic: Check production secrets
+        run: |
+          if [ -z "${{ secrets.RENDER_API_KEY }}" ]; then echo "ERROR: RENDER_API_KEY not set"; exit 1; fi
+          if [ -z "${{ secrets.RENDER_BACKEND_SERVICE_ID_PRODUCTION }}" ]; then echo "ERROR: RENDER_BACKEND_SERVICE_ID_PRODUCTION not set"; exit 1; fi
+          if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then echo "WARNING: VERCEL_TOKEN not set — Vercel deploy may fail"; fi
 
       - name: Deploy to Vercel (Production)
         uses: amondnet/vercel-action@v25
