--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  # Lint and type check
   lint:
     name: Lint and Type Check
     runs-on: ubuntu-latest
@@ -46,6 +45,13 @@ jobs:
         working-directory: ./frontend
         run: npm ci
 
+      - name: Upload npm debug logs (if npm ci fails)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-debug-logs-lint
+          path: /home/runner/.npm/_logs/**/*.log
+
       - name: Run ESLint
         working-directory: ./frontend
         run: npm run lint
@@ -58,7 +64,6 @@ jobs:
         working-directory: ./frontend
         run: npm run format:check
 
-  # Unit tests
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -88,6 +93,13 @@ jobs:
         working-directory: ./frontend
         run: npm ci
 
+      - name: Upload npm debug logs (if npm ci fails)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-debug-logs-test
+          path: /home/runner/.npm/_logs/**/*.log
+
       - name: Run unit tests
         working-directory: ./frontend
         run: npm run test:ci
@@ -100,7 +112,6 @@ jobs:
           name: frontend-coverage
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  # E2E tests
   e2e:
     name: E2E Tests
     runs-on: ubuntu-latest
@@ -122,6 +133,13 @@ jobs:
         working-directory: ./frontend
         run: npm ci
 
+      - name: Upload npm debug logs (if npm ci fails)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-debug-logs-e2e
+          path: /home/runner/.npm/_logs/**/*.log
+
       - name: Install Playwright browsers
         working-directory: ./frontend
         run: npm run test:setup
@@ -141,7 +159,6 @@ jobs:
           name: e2e-results
           path: frontend/test-results/
 
-  # Performance tests
   performance:
     name: Performance Tests
     runs-on: ubuntu-latest
@@ -163,6 +180,13 @@ jobs:
         working-directory: ./frontend
         run: npm ci
 
+      - name: Upload npm debug logs (if npm ci fails)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-debug-logs-performance
+          path: /home/runner/.npm/_logs/**/*.log
+
       - name: Build application
         working-directory: ./frontend
         run: npm run build
@@ -177,7 +201,6 @@ jobs:
         working-directory: ./frontend
         run: npm run analyze
 
-  # Security scan
   security:
     name: Security Scan
     runs-on: ubuntu-latest
@@ -208,7 +231,6 @@ jobs:
         working-directory: ./frontend
         run: npm audit --audit-level=moderate
 
-  # Build and test Docker image
   docker:
     name: Docker Build
     runs-on: ubuntu-latest
@@ -251,7 +273,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # Deploy to staging
   deploy-staging:
     name: Deploy to Staging
     runs-on: ubuntu-latest
@@ -291,7 +312,6 @@ jobs:
             https://api.render.com/v1/services/${SERVICE_ID}/deploys \
             -d '{"clearCache": true}'
 
-  # Deploy to production
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
@@ -339,7 +359,6 @@ jobs:
           webhook_url: ${{ secrets.SLACK_WEBHOOK }}
         if: always()
 
-  # Create release
   release:
     name: Create Release
     runs-on: ubuntu-latest
