--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -15,7 +15,6 @@ env:
   NODE_VERSION: '16.20.2'
 
 jobs:
-  # Build and deploy preview
   preview:
     name: Deploy Preview
     runs-on: ubuntu-latest
@@ -44,6 +43,13 @@ jobs:
       - name: Install dependencies
         working-directory: ./frontend
         run: npm ci
+
+      - name: Upload npm debug logs (if npm ci fails)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-debug-logs-preview
+          path: /home/runner/.npm/_logs/**/*.log
 
       - name: Run linting
         working-directory: ./frontend
@@ -122,174 +128,3 @@ jobs:
                 body: body
               });
             }
-
-  # Run Lighthouse on preview
-  lighthouse:
-    name: Lighthouse Audit
-    runs-on: ubuntu-latest
-    needs: preview
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
-
-      - name: Run Lighthouse CI
-        working-directory: ./frontend
-        run: |
-          npm run lighthouse:ci -- --url="https://finance-forecast-git-${GITHUB_HEAD_REF//\//-}-${GITHUB_REPOSITORY_OWNER}.vercel.app"
-        env:
-          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-          GITHUB_HEAD_REF: ${{ github.head_ref }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-
-  # Accessibility testing
-  accessibility:
-    name: Accessibility Testing
-    runs-on: ubuntu-latest
-    needs: preview
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
-
-      - name: Install Playwright browsers
-        working-directory: ./frontend
-        run: npm run test:setup
-
-      - name: Run accessibility tests
-        working-directory: ./frontend
-        run: npm run test:a11y
-        env:
-          PREVIEW_URL: "https://finance-forecast-git-${GITHUB_HEAD_REF//\//-}-${GITHUB_REPOSITORY_OWNER}.vercel.app"
-          GITHUB_HEAD_REF: ${{ github.head_ref }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-
-  # Visual regression testing
-  visual:
-    name: Visual Regression Testing
-    runs-on: ubuntu-latest
-    needs: preview
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
-
-      - name: Install Playwright browsers
-        working-directory: ./frontend
-        run: npm run test:setup
-
-      - name: Run visual regression tests
-        working-directory: ./frontend
-        run: npm run test:visual
-        env:
-          PREVIEW_URL: "https://finance-forecast-git-${GITHUB_HEAD_REF//\//-}-${GITHUB_REPOSITORY_OWNER}.vercel.app"
-          GITHUB_HEAD_REF: ${{ github.head_ref }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-
-      - name: Upload visual test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: visual-test-results
-          path: frontend/test-results/visual/
-
-  # Security scan on preview
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: preview
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@v0
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'table'
-          exit-code: '0'
-
-      - name: Scan preview URL
-        run: |
-          curl -s "https://finance-forecast-git-${GITHUB_HEAD_REF//\//-}-${GITHUB_REPOSITORY_OWNER}.vercel.app" | \
-          grep -E "(script|link|img)" | \
-          head -20
-        env:
-          GITHUB_HEAD_REF: ${{ github.head_ref }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-
-  # Performance monitoring
-  performance:
-    name: Performance Monitoring
-    runs-on: ubuntu-latest
-    needs: preview
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
-
-      - name: Run performance tests
-        working-directory: ./frontend
-        run: npm run test:performance
-        env:
-          PREVIEW_URL: "https://finance-forecast-git-${GITHUB_HEAD_REF//\//-}-${GITHUB_REPOSITORY_OWNER}.vercel.app"
-          GITHUB_HEAD_REF: ${{ github.head_ref }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-
-      - name: Upload performance results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: performance-results
-          path: frontend/test-results/performance/
